--- a/demo/assets/index.css
+++ b/demo/assets/index.css
@@ -7,3 +7,18 @@
 body {
   background: black;
 }
+
+.codeBtn {
+  bottom: 20px;
+  position: fixed;
+  right: 20px;
+  text-decoration: none;
+  background: #28292e;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 100%;
+  color: var(--tp-label-foreground-color, rgba(187, 188, 196, 0.7));
+  font-family: var(--font-family);
+}
